--- a/docs/50_lead-by-example.mdx
+++ b/docs/50_lead-by-example.mdx
@@ -16,20 +16,46 @@ Do you want to have your published dataset highlighted here or do you need assis
 
 ## Publication Dataset Pairs
 
-|Author(s)|Title|DOI of publication|Repository and DOI of dataset|Curator(s)|Description of dataset|
-|---|---|---|---|---|---|
-|Carolin Huber, Erik Müller, Tobias Schulze, Werner Brack, Martin Krauss|Improving the screening analysis of pesticide metabolites in human biomonitoring by combining high-throughput in vitro incubation and automated LC−HRMS data processing|[DOI of publication](https://doi.org/10.1021/acs.analchem.1c00972)|[MetaboLighst](https://www.ebi.ac.uk/metabolights/MTBLS2402/metabolites)<br/>[MassBank-data](https://github.com/MassBank/MassBank-data/commit/691fe2429e33c883e56d5234277a6586a128cc5c)<br/>[GitHub](https://github.com/chufz/incubatoR)|curated by publishing authors|The dataset, curated by the publishing authors, contain MS data is published in MetaboLight, Massbank and MassBank-data at GitHub. All raw mass spectra were converted to mzML format. The used code is available at GitHub and were referenced in corresponding article.|
-|Dennis Reinhard, Frank Rominger, Michael Mastalerz|Desymmetrization strategy to achieve triptycene-based 3,6-dimethoxytriphenylenes via oxidative cyclodehydrogenation|[DOI of publication](https://doi.org/10.1002/ejoc.202001073)|[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc25v89m)<br/>[heiData](https://doi.org/10.11588/data/OH6757)|curated by publishing authors|The datasets, curated by the publishing authors, and published in heiData, contains data of NMR, MS, IR in the instrument manufacturers formats.The IR data is also available in TSV format. Elemental analysis data is provided as JPG. Crystallographic data as CIF are available from CCDC. References to datasets in CCDC are given in the supporting information PDF of the corresponding article.|
-|Erik Müller, Carolin Huber, Liza-Marie Beckers, Werner Brack, Martin Krauss, Tobias Schulze|A data et of 255,000 randomly selected and manually classified extracted ion chromatograms for evaluation of peak detection methods|[DOI of publication](https://www.mdpi.com/2218-1989/10/4/162)|[Zenodo](https://doi.org/10.5281/zenodo.6137082)<br/>[MetaboLights](https://www.ebi.ac.uk/metabolights/MTBLS1455)|curated by publishing authors|The dataset, curated by the publishing authors, contains 255.000 extracted ion chromatograms (EICs or XICs) of 5000 peaks randomly sampled from across 51 environmental water samples for the evaluation on peak detection and gap filling algorithms.|
-|Fabian Thomas, Matthias Oster, Florian Schön, Kai C. Göbgen, Benedikt Amarouch, Dominik Steden, Alexander Hoffmann, Sonja Herres-Pawlis|A new generation of terminal copper nitrenes and their application in aromatic C–H amination reactions|[DOI of publication](https://doi.org/10.1039/d1dt00832c)|[Chemotion](https://dx.doi.org/10.14272/UFNYJPFRGDSKSE-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/LSGGPBYVWWQPOY-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/AXGNYRCNCNZKKZ-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/ZXFVPDKZHCLOHM-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/MHRJPVSEKXPPCE-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/BJUATVHTJTTWSW-UHFFFAOYSA-H.1)<br/>[Chemotion](https://dx.doi.org/10.14272/BJUATVHTJTTWSW-UHFFFAOYSA-H.1)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23w7mw)<br/>[ioChem-DB](https://doi.org/10.19061/iochem-bd-6-84)|curated by publishing authors|The datasets, curated by the publishing authors, contain NMR data in the instrument manufacturers formats and is also provided by Chemotion Repository in the open format JCAMP-DX. Crystallographic data as CIF files are available from CCDC and computational data was deposited in ioChem-DB. References to the crystallographic data is given in the section on supporting information in the corresponding publication. References on NMR data can be retrieved from the supplementary information PDF.|
-|Linda Jütten, Karla Ramírez-Gualito, Andreas Weilhard, Benjamin albrecht, Gabriel Cuevas, María del Carmen Fernández-Alonso, Jesús Jiménez-Barbero, Nils E. Schlörer, Dolores Diaz|Exploring the role of solvent on carbohydrate−aryl interactions by diffusion NMR-based studies|[DOI of publication](https://doi.org/10.1021/acsomega.7b01630)|[NMRShiftDB2](http://www.nmrshiftdb.org/molecule/60004029)<br/>[NMRShiftDB2](http://www.nmrshiftdb.org/molecule/60004074)<br/>[NMRShiftDB2](http://www.nmrshiftdb.org/molecule/60004071)<br/>[NMRShifDB2](http://www.nmrshiftdb.org/molecule/60004072)<br/>[NMRShiftDB2](http://www.nmrshiftdb.org/molecule/60004073)|curated by publishing authors|The dataset was curated by the publishing authors and is published in NMRShiftDB2. References to the dataset is given via DOI in the supporting information PDF.|
-|Meike Hahn, Eric von Elert, Laurent Bigler, M. Dolores Díaz Hernández, Nils E. Schloerer|5α‐Cyprinol sulfate: complete NMR assignment and revision of earlier published data, including the submission of a computer‐readable assignment in NMReDATA format|[DOI of publication](https://doi.org/10.1002/mrc.4782)|[NMRShiftDB2](https://doi.org/10.18716/nmrshiftdb2/60004113/nmredata_mrc_cd3od)|curated by publishing authors|The dataset, curated by the publishing authors, is published in NMRShiftDB2 and also available from the publisher as supporting information. References to the dataset is given via DOI in the supporting information DOCX.|
-|Melanie Paul, Melissa Teubner, Benjamin Grimm-Lebsanft, Christiane Golchert, Yannick Meiners, Laura Senft, Kristina Keisers, Patricia Liebhäuser, Thomas Rösener, Florian Biebl, Sören Buchenau, Maria Naumova, Vadim Murzin, Roxanne Krug, Alexander Hoffmann, Jörg Pietruszka, Ivana Ivanovic-Burmazovic, Michael Rübhausen, Sonja Herres-Pawlis|Exceptional substrate diversity in oxygenation reactions catalyzed by a bis(µ-oxo) copper comple|[DOI of publication](https://doi.org/10.1002/chem.202000664)|[Chemotion](https://dx.doi.org/10.14272/FCAMUPIRWKNASD-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/XQWHZHODENELCJ-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/WYPRQDLUGJFJCG-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/SXYROFUQPFOADI-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/NLACLAPNGFWSTA-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/WOMQOOHUINDJRV-UHFFFAOYSA-M.1)<br/>[Chemotion](https://dx.doi.org/10.14272/SQELSYLGCLCOLU-UHFFFAOYSA-M.1)<br/>[Chemotion](https://dx.doi.org/10.14272/SEXRCKWGFSXUOO-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/JJGCDLVZJZGHBZ-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/ODJOHIWKLOPSFF-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/AEFJLSGXOWZNJZ-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/BMNLXKVRGRRHKW-UHFFFAOYSA-N.1)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23gtbr)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23gtcs)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23gtdt)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23gtfv)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23wtb5)|curated by publishing authors|The datasets, curated by the publishing authors, contain NMR data in the instrument manufacturers formats and is also provided by Chemotion Repository in the open format JCAMP-DX. Crystallographic data as CIF files are available from CCDC. References to datasets are given in the supporting information. PDF of the corresponding article.|
-|Nadine Vogler, Thomas Bocklitz, Firas Subhi Salah, Carsten Schmidt, Rolf Brauer, Tiantian Cui, Masoud Mireskandari, Florian R. Greten, Michael Schmitt, Andreas Stallmach, Iver Petersen, Jürgen Popp|Systematic evaluation of the biological variance within the Raman based colorectal tissue diagnostics|[DOI of publication](https://doi.org/10.1002/jbio.201500237)|[Zenodo](https://zenodo.org/record/3905058)|curated by publishing authors|In the following, a short desciption for each csv files: Meta data: includes information about mice ID, scans collected from each mouse, location of extracted scans, activity of P53 gene, mouce gender, tissue type. MSpectra: contains mean spectra of tissue . Wavenumbers: includes Raman spectra. wavenumbers.TissueLabels: describes different divisions of tissue types;e.g. normal vs abnormal, normal vs HB vs Karzinom, normal vs HB vs adenoma vs carcinomatypes with respect to each extracted scan.|
-|Robin M. Bär, Lukas Langer, Martin Nieger, Stefan Bräse|Bicyclo\[1.1.1\]pentyl sulfoximines: synthesis and functionalizations|[DOI of publication](https://doi.org/10.1002/adsc.201901453)|[Chemotion](https://dx.doi.org/10.14272/NMNCNBZSKZJASF-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/DMHUHEHJOBWIMO-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/PHPYRTSEAMTSEI-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/PLJOXMUHAAQZQY-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/UAZVVKAIALHHII-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/LFQXFMHDVUMDRF-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/AICNJBZHCMEDFX-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/NEKGDCIKXKJMQB-UHFFFAOYSA-N.2)<br/>[Chemotion](https://dx.doi.org/10.14272/XVYUYMKGDFPRBJ-UHFFFAOYSA-N.2)<br/>[Chemotion](https://dx.doi.org/10.14272/JPDHSBXYSZUVMX-UHFFFAOYSA-N.1)<br/>[Chemotion](https://dx.doi.org/10.14272/XPZLSBJQMZMCMC-UHFFFAOYSA-N.1)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hkz5)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl07)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl18)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl29)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl3b)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl4c)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl5d)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl6f)|curated by publishing authors|The datasets, curated by the publishing authors, contains NMR data in the instrument manufacturers formats and is also provided by Chemotion Repository in the open format JCAMP-DX. Crystallographic data as CIF are available from CCDC. References to datasets in CCDC are given in the supporting. information PDF of the corresponding article.|
-|Shuxia Guo et al.|Comparability of Raman spectroscopic configurations: A large scale cross-laboratory study|[DOI of publication](https://doi.org/10.1021/acs.analchem.0c02696)|[Zenodo](https://zenodo.org/record/4152953)|curated by publishing authors|Slightly processed raw data for the paper 'Comparability of Raman Spectroscopic Configurations: A Large Scale Cross-Laboratory Study': The processing include a spike removal to allow an interpolation to a common wavenumber axis. Always three files belong to each other: wavenumber axis file (wx_XYZ), spectral intensity file (spec_XYZ) and metadata file (meta_XYZ). The ‘XYZ’ refers to the samples measured (see the publication and its SI for details).|
-|Toni Ditfe, Eileen Bette, Haider N. Sultani, Alexander Otto, Ludger A. Wessjohann, Norbert Arnold, Bernhard Westermann|Synthesis and biological evaluation of highly potent fungicidal deoxy-hygrophorones|[DOI of publication](https://doi.org/10.1002/ejoc.202100729)|[RADAR](https://doi.org/10.22000/451)|Tillmann G. Fischer (IPB)|The dataset, prepared for publication under NFDI4Chem stewardship and published in RADAR, contains NMR and MS data in the instrument manufacturers formats as well as in open formats such as JCAMP-DX, NMReDATA for NMR data and mzML for MS data. Results from the bioassay are available as CSV. Additionally, all structures are provided as CTfiles and are listed, corresponding to their numbering in the publication, in an CSV including IPB 3LC lab journal entries, SMILES structure codes and InChI and InChIkey identifiers. The corresponding article references the dataset in the section on supporting information.|
-|Xubin Wang, Bernd Kohl, Frank Rominger, Sven M. Elbert, Michael Mastalerz|A triptycene-based enantiopure bis(diazadibenzoanthracene) by a chirality-assisted synthesis approach|[DOI of publication](https://doi.org/10.1002/chem.202002781)|[heiDATA](https://heidata.uni-heidelberg.de/dataset.xhtml?persistentId=doi:10.11588/data/46LINE&version=1.0)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc25b961)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc25b972)|curated by publishing authors|The datasets, curated by the publishing authors, and published in heiData, contains data of NMR, MS, IR in the instrument manufacturers formats.The IR data is also available in TSV format. Elemental analysis data is provided as JPG. Crystallographic data as CIF are available from CCDC. References to datasets in CCDC are given in the supporting information PDF of the corresponding article.|
+|Author(s)|Title|Repository and DOI of dataset|Curator(s)|Description of dataset|
+|---|---|---|---|---|
+
+|Robin M. Bär, Lukas Langer, Martin Nieger, Stefan Bräse|[Bicyclo\[1.1.1\]pentyl sulfoximines: synthesis and functionalizations](https://doi.org/10.1002/adsc.201901453)|[Chemotion Repository](https://dx.doi.org/10.14272/NMNCNBZSKZJASF-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/DMHUHEHJOBWIMO-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/PHPYRTSEAMTSEI-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/PLJOXMUHAAQZQY-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/UAZVVKAIALHHII-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/LFQXFMHDVUMDRF-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/AICNJBZHCMEDFX-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/NEKGDCIKXKJMQB-UHFFFAOYSA-N.2)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/XVYUYMKGDFPRBJ-UHFFFAOYSA-N.2)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/JPDHSBXYSZUVMX-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/XPZLSBJQMZMCMC-UHFFFAOYSA-N.1)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hkz5)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl07)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl18)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl29)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl3b)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl4c)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl5d)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl6f)|curated by publishing authors|The datasets, curated by the publishing authors, contains NMR data in the instrument manufacturers formats and is also provided by Chemotion Repository in the open format JCAMP-DX. Crystallographic data as CIF are available from CCDC. References to datasets in CCDC are given in the supporting. information PDF of the corresponding article.|
+
+|Steffen Bochenek, Fabrizio Camerin, Emanuela Zaccarelli, Armando Maestro,
+Maximilian M. Schmidt, Walter Richtering, Andrea Scotti|[In-situ study of the impact of temperature and architecture on the interfacial structure of microgels](https://dx.doi.org/10.1038/s41467-022-31209-3)|[RADAR](https://dx.doi.org/10.22000/603)|Dataset  inludes raw, associated, and derived data supporting the reported results; methods: NR, DLS, AFM, SANS.RADAR DOI as well as ePIC for archived dataset (identical to published dataset) are given in the data availability statement. The RADAR DOI is also listed listed in the references. The NR raw data used in the study are available in the ILL Data Portal database under [accession](10.5291/ILL-DATA.9-11-187191) and [accession](10.5291/ILL-DATA.EASY-46292) (also listed in references and DAS).|
+
+|Toni Ditfe, Eileen Bette, Haider N. Sultani, Alexander Otto, Ludger A. Wessjohann, Norbert Arnold, Bernhard Westermann|[Synthesis and biological evaluation of highly potent fungicidal deoxy-hygrophorones](https://doi.org/10.1002/ejoc.202100729)|[RADAR](https://doi.org/10.22000/451)|Tillmann G. Fischer (IPB)|The dataset, prepared for publication under NFDI4Chem stewardship and published in RADAR, contains NMR and MS data in the instrument manufacturers formats as well as in open formats such as JCAMP-DX, NMReDATA for NMR data and mzML for MS data. Results from the bioassay are available as CSV. Additionally, all structures are provided as CTfiles and are listed, corresponding to their numbering in the publication, in an CSV including IPB 3LC lab journal entries, SMILES structure codes and InChI and InChIkey identifiers. The corresponding article references the dataset in the section on supporting information.|
+
+|Saskia Finckh, Liza-Marie Beckers, Wibke Busch, Eric Carmona, Valeria Dulio, Lena Kramer, Martin Krauss, Leo Posthuma, Tobias Schulze, Jaap Slootweg, Peter C. von der Ohe, Werner Brack|[A risk based assessment approach for chemical mixtures from wastewater treatment plant effluents](https://doi.org/10.1016/j.envint.2022.107234)|[Pangaea](https://doi.pangaea.de/10.1594/PANGAEA.940755)|curated by the publishing authors|The dataset includes results data, raw mass spectral files, and processing data (MZmine, MZquant, Tracefinder). Pangaea is a repository for geospatial data and enviromental chemistry. The publication contains a supplemental [word document](https://ars.els-cdn.com/content/image/1-s2.0-S016041202200160X-mmc1.docx) and [spreadsheet](https://ars.els-cdn.com/content/image/1-s2.0-S016041202200160X-mmc2.xlsx).|
+
+|Shuxia Guo et al.|[Comparability of Raman spectroscopic configurations: A large scale cross-laboratory study](https://doi.org/10.1021/acs.analchem.0c02696)|[Zenodo](https://zenodo.org/record/4152953)|curated by publishing authors|Slightly processed raw data for the paper 'Comparability of Raman Spectroscopic Configurations: A Large Scale Cross-Laboratory Study': The processing include a spike removal to allow an interpolation to a common wavenumber axis. Always three files belong to each other: wavenumber axis file (wx_XYZ), spectral intensity file (spec_XYZ) and metadata file (meta_XYZ). The ‘XYZ’ refers to the samples measured (see the publication and its SI for details).|
+
+|Meike Hahn, Eric von Elert, Laurent Bigler, M. Dolores Díaz Hernández, Nils E. Schloerer|[5α‐Cyprinol sulfate: complete NMR assignment and revision of earlier published data, including the submission of a computer‐readable assignment in NMReDATA format](https://doi.org/10.1002/mrc.4782)|[NMRShiftDB2](https://doi.org/10.18716/nmrshiftdb2/60004113/nmredata_mrc_cd3od)|curated by publishing authors|The dataset, curated by the publishing authors, is published in NMRShiftDB2 and also available from the publisher as supporting information. References to the dataset is given via DOI in the supporting information word document.|
+
+|Joshua Heck, Fabian Metz, Sören Buchenau, Melissa Teubner, Benjamin Grimm-Lebsanft, Thomas P. Spaniol, Alexander Hoffmann, Michael A. Rübhausen, Sonja Herres-Pawlis|[Manipulating electron transfer – the influence ofsubstituents on novel copper guanidine quinolinyl complexes](https://doi.org/10.1039/D2SC02910C)|[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-JHIAOWGCGN-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-XNDIRRNFWB-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-YSUUDYJLPD-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-MTPUXEIATO-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-DYIBODSCVM-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-YSUUDYJLPD-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-BRNGTXITIQ-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-ACOFZHHYLN-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-YKNRUBPOGQ-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-ZJSFNHZUYT-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-HXVOLPKNEJ-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-FYZDDQVKLM-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-AOATVJLAFL-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-XTTRESRELV-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-MCYXBNUZMI-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-NNDILYOKJA-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-DMWOEMCLSH-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-JZHZQROLCJ-UHFFFADPSC-NUHFF-MUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-FNFSJYCLRP-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-UMMQIWZYOP-UHFFFADPSC-NUHFF-LUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-GCLZBRQZKM-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-XYXSWFSTLI-UHFFFADPSC-NUHFF-LUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-JBXRXORXEO-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-GQFHEVHUGU-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-UMXPYYQOWK-UHFFFADPSC-NUHFF-LUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-JQDGMCVIMF-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-DRQHCTISPL-UHFFFADPSC-NUHFF-LUHFF-NUHFF-ZZZ<br/>[RADAR](https://dx.doi.org/10.22000/613)|Curated by publishing authors|Dataset includes reactions, sample data (ATR-FTIR, HR-ESI-TOF-MS,  1N/13C-NMR), and density functional theory (DFT) data. The publication contains a [supplemental PDF](https://www.rsc.org/suppdata/d2/sc/d2sc02910c/d2sc02910c1.pdf) and [crystal structure data](https://www.rsc.org/suppdata/d2/sc/d2sc02910c/d2sc02910c2.cif). The reactions and samples are deposited on Chemotion Repository and the DFT data on RADAR.|
+
+|Judith Elizabeth Houston, Lisa Fruhner, Alexis de la Cotte, Javier Rojo González, Alexander Valerievich Petrunin, Urs Gasser, Ralf Schweins, Jürgen Allgaier, Walter Richtering, Alberto Fernandez-Nieves, Andrea Scotti|[Resolving the different bulk moduli within individual soft nanogels using small-angle neutron scattering](https://doi.org/10.1126/sciadv.abn6129)|[RADAR](https://dx.doi.org/10.22000/604)|curated by the puplishing authors|Dataset includes SANS data. The link (not DOI) is inlcuded in the published article's data availability statement as well as a DOI to further [SANS data](http://dx.doi.org/10.5291/ILL-DATA.9-11-2067). 
+
+|Carolin Huber, Erik Müller, Tobias Schulze, Werner Brack, Martin Krauss|[Improving the screening analysis of pesticide metabolites in human biomonitoring by combining high-throughput in vitro incubation and automated LC−HRMS data processing](https://doi.org/10.1021/acs.analchem.1c00972)|[MetaboLights](https://www.ebi.ac.uk/metabolights/MTBLS2402/metabolites)<br/>[MassBank-data](https://github.com/MassBank/MassBank-data/commit/691fe2429e33c883e56d5234277a6586a128cc5c)<br/>[GitHub](https://github.com/chufz/incubatoR)|curated by publishing authors|The dataset, curated by the publishing authors, contain MS data is published in MetaboLight, Massbank and MassBank-data at GitHub. All raw mass spectra were converted to mzML format. The used code is available at GitHub and were referenced in corresponding article.|
+
+|Linda Jütten, Karla Ramírez-Gualito, Andreas Weilhard, Benjamin albrecht, Gabriel Cuevas, María del Carmen Fernández-Alonso, Jesús Jiménez-Barbero, Nils E. Schlörer, Dolores Diaz|[Exploring the role of solvent on carbohydrate−aryl interactions by diffusion NMR-based studies](https://doi.org/10.1021/acsomega.7b01630)|[NMRShiftDB2](http://www.nmrshiftdb.org/molecule/60004029)<br/>[NMRShiftDB2](http://www.nmrshiftdb.org/molecule/60004074)<br/>[NMRShiftDB2](http://www.nmrshiftdb.org/molecule/60004071)<br/>[NMRShifDB2](http://www.nmrshiftdb.org/molecule/60004072)<br/>[NMRShiftDB2](http://www.nmrshiftdb.org/molecule/60004073)|curated by publishing authors|The dataset was curated by the publishing authors and is published in NMRShiftDB2. References to the dataset is given via DOI in the supporting information PDF.|
+
+|Nils Keltsch, Viola Munzert, Klaus-Peter Zeller, Hans-Ullrich Siehl, Stefan Berger, Dieter Sicker|[Linderazulen aus einer invasiven Pflanze - Delphi und sein violettes Wunder](https://doi.org/10.1002/ciuz.201900868)|
+
+|Erik Müller, Carolin Huber, Liza-Marie Beckers, Werner Brack, Martin Krauss, Tobias Schulze|[A data et of 255,000 randomly selected and manually classified extracted ion chromatograms for evaluation of peak detection methods](https://www.mdpi.com/2218-1989/10/4/162)|[Zenodo](https://doi.org/10.5281/zenodo.6137082)<br/>[MetaboLights](https://www.ebi.ac.uk/metabolights/MTBLS1455)|curated by publishing authors|The dataset, curated by the publishing authors, contains 255.000 extracted ion chromatograms (EICs or XICs) of 5000 peaks randomly sampled from across 51 environmental water samples for the evaluation on peak detection and gap filling algorithms.|
+
+|Melanie Paul, Melissa Teubner, Benjamin Grimm-Lebsanft, Christiane Golchert, Yannick Meiners, Laura Senft, Kristina Keisers, Patricia Liebhäuser, Thomas Rösener, Florian Biebl, Sören Buchenau, Maria Naumova, Vadim Murzin, Roxanne Krug, Alexander Hoffmann, Jörg Pietruszka, Ivana Ivanovic-Burmazovic, Michael Rübhausen, Sonja Herres-Pawlis|[Exceptional substrate diversity in oxygenation reactions catalyzed by a bis(µ-oxo) copper comple](https://doi.org/10.1002/chem.202000664)|[Chemotion Repository](https://dx.doi.org/10.14272/FCAMUPIRWKNASD-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/XQWHZHODENELCJ-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/WYPRQDLUGJFJCG-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/SXYROFUQPFOADI-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/NLACLAPNGFWSTA-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/WOMQOOHUINDJRV-UHFFFAOYSA-M.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/SQELSYLGCLCOLU-UHFFFAOYSA-M.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/SEXRCKWGFSXUOO-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/JJGCDLVZJZGHBZ-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/ODJOHIWKLOPSFF-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/AEFJLSGXOWZNJZ-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/BMNLXKVRGRRHKW-UHFFFAOYSA-N.1)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23gtbr)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23gtcs)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23gtdt)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23gtfv)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23wtb5)|curated by publishing authors|The datasets, curated by the publishing authors, contain NMR data in the instrument manufacturers formats and is also provided by Chemotion Repository in the open format JCAMP-DX. Crystallographic data as CIF files are available from CCDC. References to datasets are given in the supporting information. PDF of the corresponding article.|
+
+|Agneta Prasse, Viola Munzert, Elena José, Klaus-Peter Zeller, Hans-Ullrich Siehl, Stefan Berger, DieterSicker|[Die Polei-Minze im Wandel der Zeiten](https://doi.org/10.1002/ciuz.201800860)|[RADAR4Chem](https://doi.org/10.22000/785)|curated by Tillmann G. Fischer (IPB)|The dataset, prepared for publication under NFDI4Chem stewardship and published in RADAR4Chem, contains NMR, MS and UV/VIS data in the instrument manufacturers formats as well as in open formats such as JCAMP-DX for NMR and UV/VIS data and mzML for MS data. Analytical data of CD spectroscopy and MS spectrometry were exported as tabular files and are also provided as CSV files. The structure information on (R)-+-Pulegon and supplementary information are provided as in tabular files and as SDfile format. The corresponding article does not reference to the dataset.|
+
+|Dennis Reinhard, Frank Rominger, Michael Mastalerz|[Desymmetrization strategy to achieve triptycene-based 3,6-dimethoxytriphenylenes via oxidative cyclodehydrogenation](https://doi.org/10.1002/ejoc.202001073)|[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc25v89m)<br/>[heiData](https://doi.org/10.11588/data/OH6757)|curated by publishing authors|The datasets, curated by the publishing authors, and published in heiData, contains data of NMR, MS, IR in the instrument manufacturers formats.The IR data is also available in TSV format. Elemental analysis data is provided as JPG. Crystallographic data as CIF are available from CCDC. References to datasets in CCDC are given in the supporting information PDF of the corresponding article.|
+
+|Franziska Schulze, Juliane Titus, Peter Mettke, Stefan Berger, Hans-Ullrich Siehl, Klaus-Peter Zeller, Dieter Sicker|[Karminsäure - Das Rot aus Cochenilleläusen](https://doi.org/10.1002/ciuz.201300634)|[RADAR4Chem](https://doi.org/10.22000/795)|curated by Tillmann G. Fischer (IPB)|The dataset, prepared for publication under the NFDI4Chem stewardship and published in RADAR4Chem contains NMR, MS, UV/VIS and CD data. NMR data was previously published in NMRShiftDB2 and are provided in Bruker format together with NMReDATA. MS data were converted in several different formats including mzML. UV/VIS data are available in JCAMP-DX format. The structure information on carminic acid and further supplementary information are provided in tabular files and as SDfile. The corresponding article does not reference to the dataset.|
+|Fabian Thomas, Matthias Oster, Florian Schön, Kai C. Göbgen, Benedikt Amarouch, Dominik Steden, Alexander Hoffmann, Sonja Herres-Pawlis|[A new generation of terminal copper nitrenes and their application in aromatic C–H amination reactions](https://dx.doi.org/10.14272/UFNYJPFRGDSKSE-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/LSGGPBYVWWQPOY-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/AXGNYRCNCNZKKZ-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/ZXFVPDKZHCLOHM-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/MHRJPVSEKXPPCE-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/BJUATVHTJTTWSW-UHFFFAOYSA-H.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/BJUATVHTJTTWSW-UHFFFAOYSA-H.1)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23w7mw)<br/>[ioChem-DB](https://doi.org/10.19061/iochem-bd-6-84)|curated by publishing authors|The datasets, curated by the publishing authors, contain NMR data in the instrument manufacturers formats and is also provided by Chemotion Repository in the open format JCAMP-DX. Crystallographic data as CIF files are available from CCDC and computational data was deposited in ioChem-DB. References to the crystallographic data is given in the section on supporting information in the corresponding publication. References on NMR data can be retrieved from the supplementary information PDF.|
+
+|Nadine Vogler, Thomas Bocklitz, Firas Subhi Salah, Carsten Schmidt, Rolf Brauer, Tiantian Cui, Masoud Mireskandari, Florian R. Greten, Michael Schmitt, Andreas Stallmach, Iver Petersen, Jürgen Popp[|Systematic evaluation of the biological variance within the Raman based colorectal tissue diagnostics](https://doi.org/10.1002/jbio.201500237)|[Zenodo](https://zenodo.org/record/3905058)|curated by publishing authors|In the following, a short desciption for each csv files: Meta data: includes information about mice ID, scans collected from each mouse, location of extracted scans, activity of P53 gene, mouce gender, tissue type. MSpectra: contains mean spectra of tissue . Wavenumbers: includes Raman spectra. wavenumbers.TissueLabels: describes different divisions of tissue types;e.g. normal vs abnormal, normal vs HB vs Karzinom, normal vs HB vs adenoma vs carcinomatypes with respect to each extracted scan.|
+
+|Xubin Wang, Bernd Kohl, Frank Rominger, Sven M. Elbert, Michael Mastalerz|[A triptycene-based enantiopure bis(diazadibenzoanthracene) by a chirality-assisted synthesis approach](https://doi.org/10.1002/chem.202002781)|[heiDATA](https://heidata.uni-heidelberg.de/dataset.xhtml?persistentId=doi:10.11588/data/46LINE&version=1.0)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc25b961)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc25b972)|curated by publishing authors|The datasets, curated by the publishing authors, and published in heiData, contains data of NMR, MS, IR in the instrument manufacturers formats.The IR data is also available in TSV format. Elemental analysis data is provided as JPG. Crystallographic data as CIF are available from CCDC. References to datasets in CCDC are given in the supporting information PDF of the corresponding article.|[RADAR4Chem](https://doi.org/10.22000/786)|curated by Tillmann G. Fischer (IPB)|The dataset, prepared for publication under the NFDI4Chem stewardship and published in RADAR4Chem contains NMR, MS, UV/VIS and IR data. NMR data are provided in Bruker format, as JCAMP-DX (MNova) and NMRium format including NMReDATA (SDfile). MS data are also available in open format mzML. IR and UV/VIS data are accessible in tabular files and in JCAMP-DX format. The structure information on Linderazulene and further supplementary information are provided as tables and SDfile. The corresponding article does not reference to the dataset.|
 
 
 :::note *This table will be continuously updated with further publication dataset pairs.*
